archived_docs/versions/v2.9/modules/en/pages/cluster-admin/namespaces.adoc
= Namespaces
:page-languages: [en, zh]
:revdate: 2025-04-04
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/manage-namespaces.adoc 
:product-path: cluster-admin/namespaces.adoc
ifeval::["{build-type}" != "community"]
:xref-secrets: xref:security/secrets-hub.adoc
:xref-persistent-storage: xref:cluster-admin/manage-clusters/persistent-storage/manage-persistent-storage.adoc
:xref-configmaps: xref:cluster-admin/kubernetes-resources/configmaps.adoc
:xref-workloads-and-pods: xref:cluster-admin/kubernetes-resources/workloads-and-pods/workloads-and-pods.adoc
:xref-project-resource-quotas: xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc
:xref-http-encrypt: xref:security/encrypting-http.adoc
:xref-deploy-workloads: xref:cluster-admin/kubernetes-resources/workloads-and-pods/deploy-workloads.adoc
:xref-k8s-docker-registries: xref:cluster-admin/kubernetes-resources/kubernetes-and-docker-registries.adoc
:xref-create-services: xref:cluster-admin/kubernetes-resources/create-services.adoc
:xref-lb-and-ingress-controller: xref:cluster-admin/kubernetes-resources/load-balancer-and-ingress-controller/load-balancer-and-ingress-controller.adoc
:xref-namespace-default-limit: xref:cluster-admin/project-admin/project-resource-quotas/override-default-limit-in-namespaces.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-secrets: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/secrets.adoc
:xref-persistent-storage: xref:how-to-guides/new-user-guides/manage-clusters/create-kubernetes-persistent-storage/index.adoc
:xref-configmaps: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/configmaps.adoc
:xref-workloads-and-pods: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/index.adoc
:xref-project-resource-quotas: xref:how-to-guides/advanced-user-guides/manage-projects/manage-project-resource-quotas/index.adoc
:xref-http-encrypt: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/encrypt-http-communication.adoc
:xref-deploy-workloads: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/workloads-and-pods/deploy-workloads.adoc
:xref-k8s-docker-registries: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/kubernetes-and-docker-registries.adoc
:xref-create-services: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/create-services.adoc
:xref-lb-and-ingress-controller: xref:how-to-guides/new-user-guides/kubernetes-resources-setup/load-balancer-and-ingress-controller/index.adoc
:xref-namespace-default-limit: xref:how-to-guides/advanced-user-guides/manage-projects/manage-project-resource-quotas/override-default-limit-in-namespaces.adoc
endif::[]

Within Rancher, you can further divide projects into different https://kubernetes.io/docs/concepts/overview/working-with-objects/namespaces/[namespaces], which are virtual clusters within a project backed by a physical cluster. Should you require another level of organization beyond projects and the `default` namespace, you can use multiple namespaces to isolate applications and resources.

Although you assign resources at the project level so that each namespace in the project can use them, you can override this inheritance by assigning resources explicitly to a namespace.

Resources that you can assign directly to namespaces include:

* {xref-workloads-and-pods}[Workloads]
* {xref-lb-and-ingress-controller}[Load Balancers/Ingress]
* {xref-create-services}[Service Discovery Records]
* {xref-persistent-storage}[Persistent Volume Claims]
* {xref-http-encrypt}[Certificates]
* {xref-configmaps}[ConfigMaps]
* {xref-k8s-docker-registries}[Registries]
* {xref-secrets}[Secrets]

To manage permissions in a vanilla Kubernetes cluster, cluster admins configure role-based access policies for each namespace. With Rancher, user permissions are assigned on the project level instead, and permissions are automatically inherited by any namespace owned by the particular project.

[NOTE]
====

If you create a namespace with `kubectl`, it may be unusable because `kubectl` doesn't require your new namespace to be scoped within a project that you have access to. If your permissions are restricted to the project level, it is better to <<_creating_namespaces,create a namespace through Rancher>> to ensure that you will have permission to access the namespace.
====


== Creating Namespaces

Create a new namespace to isolate apps and resources in a project.

[TIP]
====

When working with project resources that you can assign to a namespace (i.e., {xref-deploy-workloads}[workloads], {xref-http-encrypt}[certificates], {xref-configmaps}[ConfigMaps], etc.) you can create a namespace on the fly.
====


. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to create a namespace and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Go to the project where you want to add a namespace and click *Create Namespace*. Alternately, go to *Not in a Project* to create a namespace not associated with a project.
. *Optional:* If your project has {xref-project-resource-quotas}[Resource Quotas] in effect, you can override the default resource *Limits* (which places a cap on the resources that the namespace can consume).
. Enter a *Name* and then click *Create*.

*Result:* Your namespace is added to the project. You can begin assigning cluster resources to the namespace.

== Moving Namespaces to Another Project

Cluster admins and members may occasionally need to move a namespace to another project, such as when you want a different team to start using the application.

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to move a namespace and click *Explore*.
. Click menu:Cluster[Projects/Namespaces].
. Go to the namespace you want to move and click *⋮ > Move*.
. Select the namespace(s) that you want to move to a different project. Then click *Move*. You can move multiple namespaces at one.
+
[NOTE]
.Notes:
====
* Don't move the namespaces in the `System` project. Moving these namespaces can adversely affect cluster networking.
* You cannot move a namespace into a project that already has a {xref-project-resource-quotas}[resource quota] configured.
* If you move a namespace from a project that has a quota set to a project with no quota set, the quota is removed from the namespace.
====

. Choose a new project for the new namespace and then click *Move*. Alternatively, you can remove the namespace from all projects by selecting *None*.

*Result:* Your namespace is moved to a different project (or is unattached from all projects). If any project resources are attached to the namespace, the namespace releases them and then attached resources from the new project.

== Editing Namespace Resource Quotas

You can always override the namespace default limit to provide a specific namespace with access to more (or less) project resources.

For more information, see how to {xref-namespace-default-limit}[edit namespace resource quotas].
